plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sep'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
	implementation 'org.postgresql:postgresql:42.7.11'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.84'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'tools.jackson.core:jackson-databind:3.1.3'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.apache.poi:poi-ooxml:5.5.1'
	implementation 'org.apache.commons:commons-csv:1.14.1'
	implementation 'org.springframework.boot:spring-boot-starter-kafka'
	implementation platform('software.amazon.awssdk:bom:2.32.18')
	implementation 'software.amazon.awssdk:s3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-graphql-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.assertj:assertj-core:3.27.7'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:postgresql:1.21.4'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty 'user.timezone', 'Asia/Ho_Chi_Minh'
	maxHeapSize = '2g'
}
